--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,6 @@
-RewriteEngine On
-Options -Indexes
-RewriteBase /
+RewriteEngine on 
+RewriteCond %{THE_REQUEST} /([^.]+)\.php [NC]
+RewriteRule ^ /%1 [NC,L,R]
 
-# Remove .php extension
-RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}.php -f
-RewriteRule ^([^\.]+)$ $1.php [NC,L]
-
+RewriteRule ^ %{REQUEST_URI}.php [NC,L]
